<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc"
    tools:context=".Appoinments">

    <Button
        android:id="@+id/button"
        android:layout_width="172dp"
        android:layout_height="37dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/oval"
        android:onClick="addData"
        android:text="SAVE"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="172dp"
        android:layout_height="37dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/oval"
        android:onClick="getcount1"
        android:text="@string/button2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="172dp"
        android:layout_height="37dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/oval"
        android:text="@string/buttton3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="172dp"
        android:layout_height="37dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/oval"
        android:text="UPDATE"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_above="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView2"
        android:textAlignment="textStart"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="151dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="200dp"
        android:text="@string/textView4"
        android:textAlignment="textStart"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_above="@+id/textView"

        android:layout_marginBottom="16dp"
        android:text="@string/textView3"
        android:textAlignment="textStart"
        android:textColor="#0C0B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_above="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:text="@string/TextView"
        android:textAlignment="textStart"
        android:textColor="#090909"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_above="@+id/button6"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="232dp"
        android:text="@string/TextView5"
        android:textAlignment="textStart"
        android:textColor="#0B0808"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/e1"
        android:layout_width="172dp"
        android:layout_height="51dp"
        android:layout_above="@+id/button6"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="Student Name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="164dp"
        android:layout_height="40dp"
        android:layout_above="@+id/button6"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:background="?attr/colorButtonNormal"
        android:entries="@array/subjects"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="164dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:background="?attr/colorButtonNormal"
        android:entries="@array/modes"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="176dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:hint="Enter Date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <Button
        android:id="@+id/button6"
        android:layout_width="172dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/oval"
        android:text="@string/button6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/e11"
        android:layout_width="168dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="Delete/Update"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="172dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/oval"
        android:text="@string/button8"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="207dp"
        android:layout_height="47dp"
        android:layout_marginTop="108dp"
        android:text="@string/textView6"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FDFCFC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>